Update input font to prevent zoom in on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -94,6 +94,8 @@ input {
   background-color: white;
   border: 1px solid rgb(212, 212, 212);
   border-radius: 5px;
+  font-family: var(--font-body);
+  font-size: 1rem;
 }
 
 button {
